update: fix overflow layiout in timesheet card

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,26 @@
       color: rgba(129, 140, 248, 1);
     }
 
+    .with-scroll {
+      scrollbar-width: thin; /* Firefox */
+      -ms-overflow-style: none; /* IE 10+ */
+    }
+
+    .with-scroll::-webkit-scrollbar-track {
+      box-shadow: none !important;
+      background-color: transparent !important;
+    }
+
+    .with-scroll::-webkit-scrollbar {
+      width: 6px !important;
+      background-color: transparent;
+    }
+
+    .with-scroll::-webkit-scrollbar-thumb {
+      background-color: #2a2f32;
+      border-radius: 4px;
+    }
+
     .with-transition {
       animation: 0.5s appear;
     }
